# brain-copy

./: .gitignore  AGENTS.md  README.md  cluster_points.csv  cluster_points_接続分析.txt
BrainCopy/: BrainCopyApp.swift  ContentView.swift  GraphData.swift  GraphDataLoader.swift  Info.plist  KnowledgeOrganizerClient.swift  README.md  (+2 more)
BrainCopy.xcodeproj/: AGENTS.md  project.pbxproj
brain-copy-web/knowledge-organizer/: .env  .env.example  README.md  knowledge.db  pyproject.toml
brain-copy-web/knowledge-organizer/apps/api/: main.py
brain-copy-web/knowledge-organizer/apps/api/routers/: cluster.py  collections.py  search.py  summarize.py
brain-copy-web/knowledge-organizer/apps/api/schemas/: cluster.py  result.py  search.py
brain-copy-web/knowledge-organizer/apps/api/services/: mistral_client.py  relate.py  retrieval.py  summarizer.py
brain-copy-web/knowledge-organizer/core/: config.py  logging.py
brain-copy-web/knowledge-organizer/core/utils/: hashing.py  text_clean.py
brain-copy-web/knowledge-organizer/pipelines/enrich/: embedder.py  summarizer.py  tagger.py
brain-copy-web/knowledge-organizer/pipelines/ingest/: chunker.py  text_loader.py
brain-copy-web/knowledge-organizer/pipelines/relate/: cluster.py  graph_builder.py  similarity.py
brain-copy-web/knowledge-organizer/prompts/: answer_with_citations.md  summarize_cluster.md  summarize_doc.md  tag_chunks.md
brain-copy-web/knowledge-organizer/scripts/: run_api.py
brain-copy-web/knowledge-organizer/storage/sql/: models.py  repo.py
brain-copy-web/knowledge-organizer/storage/vector/: client.py  indexes.py
(+43 files in other folders)
